Simplify the Cartesian Quadro any-in any-out tests