@@ -130,28 +130,13 @@ class MapBasedCheckoutTableGeneratorTests {
 
     private static Stream<Arguments> withCartesianQuadroBoardAnyInAnyOutCheckouts() {
         return Stream.of(
-                Arguments.of(
-                        0,
-                        Collections.emptyList()
-                ),
-                Arguments.of(
-                        1,
-                        List.of(
-                                List.of(List.of("1"))
-                        )
-                ),
+                Arguments.of(0, Collections.emptyList()),
+                Arguments.of(1, List.of(List.of(List.of("1")))),
                 Arguments.of(
                         2,
                         List.of(
                                 List.of(List.of("2")),
                                 List.of(List.of("D1"))
-                        )
-                ),
-                Arguments.of(
-                        3,
-                        List.of(
-                                List.of(List.of("3")),
-                                List.of(List.of("T1"))
                         )
                 ),
                 Arguments.of(
@@ -163,54 +148,6 @@ class MapBasedCheckoutTableGeneratorTests {
                         )
                 ),
                 Arguments.of(
-                        5,
-                        List.of(
-                                List.of(List.of("5"))
-                        )
-                ),
-                Arguments.of(
-                        6,
-                        List.of(
-                                List.of(List.of("6")),
-                                List.of(List.of("D3")),
-                                List.of(List.of("T2"))
-                        )
-                ),
-                Arguments.of(
-                        7,
-                        List.of(
-                                List.of(List.of("7"))
-                        )
-                ),
-                Arguments.of(
-                        8,
-                        List.of(
-                                List.of(List.of("8")),
-                                List.of(List.of("D4")),
-                                List.of(List.of("Q2"))
-                        )
-                ),
-                Arguments.of(
-                        9,
-                        List.of(
-                                List.of(List.of("9")),
-                                List.of(List.of("T3"))
-                        )
-                ),
-                Arguments.of(
-                        10,
-                        List.of(
-                                List.of(List.of("10")),
-                                List.of(List.of("D5"))
-                        )
-                ),
-                Arguments.of(
-                        11,
-                        List.of(
-                                List.of(List.of("11"))
-                        )
-                ),
-                Arguments.of(
                         12,
                         List.of(
                                 List.of(List.of("12")),
@@ -219,100 +156,16 @@ class MapBasedCheckoutTableGeneratorTests {
                                 List.of(List.of("Q3"))
                         )
                 ),
+                Arguments.of(76, List.of(List.of(List.of("Q19")))),
+                Arguments.of(80, List.of(List.of(List.of("Q20")))),
                 Arguments.of(
-                        13,
+                        156,
                         List.of(
-                                List.of(List.of("13"))
+                                List.of(List.of("Q19"), List.of("Q20")),
+                                List.of(List.of("Q20"), List.of("Q19"))
                         )
                 ),
-                Arguments.of(
-                        14,
-                        List.of(
-                                List.of(List.of("14")),
-                                List.of(List.of("D7"))
-                        )
-                ),
-                Arguments.of(
-                        15,
-                        List.of(
-                                List.of(List.of("15")),
-                                List.of(List.of("T5"))
-                        )
-                ),
-                Arguments.of(
-                        16,
-                        List.of(
-                                List.of(List.of("16")),
-                                List.of(List.of("D8")),
-                                List.of(List.of("Q4"))
-                        )
-                ),
-                Arguments.of(
-                        17,
-                        List.of(
-                                List.of(List.of("17"))
-                        )
-                ),
-                Arguments.of(
-                        18,
-                        List.of(
-                                List.of(List.of("18")),
-                                List.of(List.of("D9")),
-                                List.of(List.of("T6"))
-                        )
-                ),
-                Arguments.of(
-                        19,
-                        List.of(
-                                List.of(List.of("19"))
-                        )
-                ),
-                Arguments.of(
-                        20,
-                        List.of(
-                                List.of(List.of("20")),
-                                List.of(List.of("D10")),
-                                List.of(List.of("Q5"))
-                        )
-                ),
-                Arguments.of(
-                        25,
-                        List.of(
-                                List.of(List.of("25"))
-                        )
-                ),
-                Arguments.of(
-                        40,
-                        List.of(
-                                List.of(List.of("D20")),
-                                List.of(List.of("Q10"))
-                        )
-                ),
-                Arguments.of(
-                        50,
-                        List.of(
-                                List.of(List.of("D25"))
-                        )
-                ),
-                Arguments.of(
-                        60,
-                        List.of(
-                                List.of(List.of("T20")),
-                                List.of(List.of("Q15"))
-                        )
-                ),
-                Arguments.of(
-                        80,
-                        List.of(
-                                List.of(List.of("Q20"))
-                        )
-                ),
-                Arguments.of(
-                        160,
-                        List.of(
-                                List.of(List.of("Q20"), List.of("Q20"))
-                        )
-                ),
+                Arguments.of(160, List.of(List.of(List.of("Q20"), List.of("Q20")))),
                 Arguments.of(
                         236,
                         List.of(
@@ -321,12 +174,7 @@ class MapBasedCheckoutTableGeneratorTests {
                                 List.of(List.of("Q20"), List.of("Q20"), List.of("Q19"))
                         )
                 ),
-                Arguments.of(
-                        240,
-                        List.of(
-                                List.of(List.of("Q20"), List.of("Q20"), List.of("Q20"))
-                        )
-                )
+                Arguments.of(240, List.of(List.of(List.of("Q20"), List.of("Q20"), List.of("Q20"))))
         );
     }
 }
